# MikoEcho

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ETHICS.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
examples/: basic_voice_cloning.py  emotion_interpolation.py
mikoecho/: __init__.py
mikoecho/config/: __init__.py  config_manager.py
mikoecho/data/: __init__.py  audio_processor.py  augmentation.py  dataset.py
mikoecho/inference/: __init__.py  voice_cloner.py  voice_converter.py
mikoecho/models/: __init__.py  content_disentangler.py  mikoecho_model.py  speaker_encoder.py  speech_encoder.py  style_encoder.py  vocoder.py
mikoecho/training/: __init__.py  losses.py  metrics.py
mikoecho/utils/: __init__.py  checkpoint.py  logger.py
scripts/: api.py  infer.py
web/: README.md  app.js  style.css
